add search article

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -7,14 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="{% url 'price' %}">Price</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+      <form class="d-flex" role="search" action="{% url 'search' %}" method="POST">
+        {% csrf_token %}
+        <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search" name="name_q">
         <button class="btn btn-outline-success" type="submit">Rechercher </button>
       </form>
     </div>
